fix button alignment

--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -180,5 +180,4 @@ button {
   padding: 0;
   font: inherit;
   cursor: pointer;
-  text-align: inherit;
 }
